# OfficeAgent

./: .gitignore  .gitinore  office-agent.pid  pom.xml
agent-core/: pom.xml
agent-core/src/main/java/: module-info.java
agent-core/src/main/java/com/owiseman/agent/: Agent.java  MemoryStore.java  MemoryStoreFacade.java  PatchGenerator.java  PatchGeneratorFacade.java  PatchOperation.java  PatchOperationFacade.java  Planner.java  PlannerFacade.java  ToolExecutor.java  ToolExecutorFacade.java  ToolRegistry.java  ToolRegistryFacade.java
api-gateway/: pom.xml
api-gateway/src/main/java/: module-info.java
api-gateway/src/main/java/com/owiseman/gateway/: ApiGateway.java
desktop-client/: pom.xml
desktop-client/src/main/java/: module-info.java
desktop-client/src/main/java/com/owiseman/desktop/: DesktopApp.java
document-core/: pom.xml
document-core/src/main/java/: module-info.java
document-core/src/main/java/com/owiseman/document/: DocumentCore.java  (+3 more)
ipc-core/: pom.xml
ipc-core/src/main/java/: module-info.java
launcher/: module-info.java  pom.xml
launcher/src/main/java/: module-info.java
native-bridge/: pom.xml
native-bridge/src/main/java/: module-info.java
native/llama/: convert_hf_to_gguf.py  test-grammar-output.tmp  test-json-schema-input.tmp
native/llama/build-x64-linux-gcc-release/: DartConfiguration.tcl  build.ninja  compile_commands.json  llama-config.cmake
native/llama/build-x64-linux-gcc-release/Testing/: TAG
native/llama/build-x64-linux-gcc-release/Testing/20260509-0130/: Test.xml
native/llama/build-x64-linux-gcc-release/common/: build-info.cpp
native/llama/build-x64-linux-gcc-release/ggml/: ggml-config.cmake
native/llama/common/: arg.cpp
native/llama/docs/: qwen3-omni-server-tts-summary.md
native/llama/docs/llm_new_model/: python_gguf.md  qwen3-omni.md
native/llama/gguf-py/gguf/: tensor_mapping.py
native/llama/src/: llama-arch.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp
native/llama/tools/cli/: cli.cpp
native/llama/tools/mtmd/: CMakeLists.txt  clip-impl.h  clip.cpp  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd-tts.cpp  mtmd.cpp  mtmd.h
native/llama/tools/server/: CMakeLists.txt  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-task.h  server.cpp
office-engine/: pom.xml
office-engine/src/main/java/: module-info.java
packaging/: pom.xml
pdf-engine/: pom.xml
pdf-engine/src/main/java/: module-info.java
runtime-core/: pom.xml
runtime-core/src/main/java/: module-info.java
web-client/: index.html  package.json  vite.config.ts
web-client/src/: App.tsx
web-client/src/components/: App.tsx  ChatPanel.tsx
web-client/src/hooks/: useAgent.ts  useDocument.ts
web-client/src/services/: api.ts
web-client/src/types/: api.ts
worker-api/: pom.xml
worker-api/src/main/java/: module-info.java
(+277 files in other folders)
